  - #1978, wrong answer when calculating length of a closed circular 
           arc (circle)
  - #1989, Preprocess input geometry to just intersection with raster
           to be clipped
  - #2021, Added multi-band support to ST_Union(raster, ...) aggregate function
  - #2006, better support of ST_Area(geography) over poles and dateline
  - TopologySummary output now includes unregistered layers and a count
    of missing TopoGeometry objects from their natural layer.
  - ST_HillShade(), ST_Aspect() and ST_Slope() have one new optional 
    parameter to interpolate NODATA pixels before running the operation.
  - point variant of ST_SetValue(raster) is now a wrapper around geomval 
    variant of ST_SetValues(rast).
  - proper support for raster band's isnodata flag in core API and loader.

* Fixes *

  - #1839, handling of subdatasets in GeoTIFF in raster2pgsql.
  - #1840, fix logic of when to compute # of tiles in raster2pgsql.
  - #1870, align the docs and actual behavior of raster's ST_Intersects
  - #1872, fix ST_ApproxSummarystats to prevent division by zero
  - #1875, ST_SummaryStats returns NULL for all parameters except count
           when count is zero
  - #1932, fix raster2pgsql of syntax for index tablespaces
  - #1936, ST_GeomFromGML on CurvePolygon causes server crash
  - #1939, remove custom data types: summarystats, histogram, quantile, 
           valuecount
  - #1951, remove crash on zero-length linestrings
  - #1957, ST_Distance to a one-point LineString returns NULL 
  - #1976, Geography point-in-ring code overhauled for more reliability
  - #1981, cleanup of unused variables causing warnings with gcc 4.6+
  - #2026, improve performance of distance calculations 
  - #2057, Fixed linking issue for raster2psql to libpq

PostGIS 2.0.1
2012/06/22

* Bug Fixes *

  - #1264, fix st_dwithin(geog, geog, 0). 
  - #1468  shp2pgsql-gui table column schema get shifted
  - #1694, fix building with clang. (vince)