@@ -62,6 +62,7 @@ PostGIS 2.1.0
            to be clipped
   - #2021, Added multi-band support to ST_Union(raster, ...) aggregate function
   - #2006, better support of ST_Area(geography) over poles and dateline
+  - #2065, ST_Clip(raster, ...) now a C function
   - TopologySummary output now includes unregistered layers and a count
     of missing TopoGeometry objects from their natural layer.
   - ST_HillShade(), ST_Aspect() and ST_Slope() have one new optional 
